<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sudotechpng.android.evdreselleraid.SettingsFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <EditText
            android:id="@+id/user_evdPIN"
            android:hint="@string/input_reseller_pin"
            android:textColorHint="@color/secondaryLight"
            android:textColor="@color/secondaryLight"
            android:inputType="phone|numberPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/saveUserBtn"
            android:layout_below="@id/user_evdPIN"
            android:text="Save"
            android:background="@color/secondaryDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="@dimen/h1"
            />
            <!--android:onClick="saveUserSettings"-->
        <LinearLayout
            android:orientation="vertical"
            android:layout_below="@id/saveUserBtn"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:gravity="center|top"
            android:padding="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:text="INSTRUCTIONS"
                android:textSize="@dimen/h2"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/user_instr1"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/user_instr2"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/user_instr3"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>
