<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sudotechpng.android.evdreselleraid.TransactionsFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/transaction_name"
            android:hint="Transaction Name"
            android:textSize="25dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textAllCaps="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/transaction_number"
            android:layout_below="@id/transaction_name"
            android:hint="@string/phone_number_example"
            android:textColorHint="@color/colorSecondaryLight"
            android:textColor="@color/colorSecondaryLight"
            android:inputType="phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:id="@+id/transaction_amount_button_container"
            android:layout_below="@id/transaction_number"
            android:orientation="horizontal"
            android:weightSum="10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/transaction_amount"
                android:hint="@string/topap_amount_example"
                android:layout_weight="7"
                android:textColorHint="@color/colorSecondaryLight"
                android:textColor="@color/colorSecondaryLight"
                android:inputType="phone|number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/process_transaction_btn"
                android:layout_weight="3"
                android:text="@string/tab0"
                android:background="@color/colorSecondaryDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
